fix logo svg render 0 not visible by css logo img height: 32px;

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -54,6 +54,7 @@ body {
 }
 
 .logo img {
+  height: 32px;
   max-height: 50px;
   width: auto;
   margin-left: 10px;
